Allow auto complete for title text input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="main" class="flex flex-col overflow-hidden">
     <div class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
       <div class="px-1.5 py-1.5 border-b border-gray-200">
-        <input type="text" name="titleInput" id="titleInput" class="block w-full text-xl font-normal text-gray-800 px-1.5 py-1.5 placeholder-gray-500 border-0 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" autocomplete="off" />
+        <input type="text" name="titleInput" id="titleInput" class="block w-full text-xl font-normal text-gray-800 px-1.5 py-1.5 placeholder-gray-500 border-0 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
       </div>
       <div id="bodyInput"></div>
       <div class="h-28"></div>
