--- a/index.html
+++ b/index.html
@@ -113,14 +113,18 @@
           document.querySelector('#titleInput').addEventListener('focus', onFocusChange);
           editor.editing.view.document.on('change:isFocused', onFocusChange);
 
+          const setTitle = (title) => {
+            document.querySelector('#titleInput').value = title;
+          };
+
           let dir;
 
           const setDir = (_dir) => {
             dir = _dir
           };
 
-          const setTitle = (title) => {
-            document.querySelector('#titleInput').value = title;
+          const revokeObjectUrl = (objectUrl) => {
+            URL.revokeObjectURL(objectUrl);
           };
 
           let noteMedia = [];
@@ -134,6 +138,7 @@
               URL.revokeObjectURL(objectUrl);
             }
             objectUrlContents = {};
+
             objectUrlNames = {};
           };
 
@@ -173,13 +178,11 @@
           };
 
           const replaceWithFiles = (body) => {
-            window.ReactNativeWebView.postMessage('clear:objectUrlFiles:true');
-
-            const media = noteMedia.filter(({ content }) => {
-              return isString(content) && content.startsWith('file:');
+            const media = noteMedia.filter(({ name }) => {
+              return isString(name) && name.startsWith('cdroot/');
             });
             for (const { name, content } of media) {
-              const fileUrl = content.replace('file://', dir + '/');
+              const fileUrl = name.replace('cdroot/', dir + '/');
 
               window.ReactNativeWebView.postMessage(
                 'include:objectUrlFiles:' + fileUrl + SEP + name + SEP + content
@@ -200,12 +203,10 @@
 
           const getData = () => {
             window.ReactNativeWebView.postMessage('clear:objectUrlContents:true');
-            if (objectUrlContents) {
-              for (const [k, v] of Object.entries(objectUrlContents)) {
-                window.ReactNativeWebView.postMessage(
-                  'add:objectUrlContents:' + k + SEP + v.fname + SEP + v.content
-                );
-              }
+            for (const [k, v] of Object.entries(objectUrlContents)) {
+              window.ReactNativeWebView.postMessage(
+                'add:objectUrlContents:' + k + SEP + v.fname + SEP + v.content
+              );
             }
 
             window.ReactNativeWebView.postMessage('clear:objectUrlNames:true');
@@ -221,7 +222,8 @@
           };
 
           window.justnote = {
-            setDir, setTitle, clearNoteMedia, addNoteMedia, setBody, getData,
+            setTitle, setDir, revokeObjectUrl, clearNoteMedia, addNoteMedia,
+            setBody, getData,
           };
           window.ReactNativeWebView.postMessage('editor:isReady:true');
         }
