--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             return blob;
           };
 
-          const replaceWithContents = (body) => {
+          const replaceWithContents = async (body) => {
             const _media = noteMedia.filter(({ content }) => {
               return isString(content) && content.startsWith('data:');
             });
@@ -196,7 +196,7 @@
           };
 
           const setBody = async (body) => {
-            body = replaceWithContents(body);
+            body = await replaceWithContents(body);
             body = replaceWithFiles(body);
             editor.setData(body);
           };
