--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="antialiased overflow-hidden">
   <div id="main" class="flex flex-col overflow-hidden">
-    <div class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
+    <div id="scrollView" class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
       <div class="px-1.5 py-1.5 border-b border-gray-200">
         <input type="text" name="titleInput" id="titleInput" class="block w-full text-xl font-normal text-gray-800 px-1.5 py-1.5 placeholder-gray-500 border-0 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
       </div>
@@ -20,7 +20,9 @@
     </div>
     <div id="bodyToolbar" class="flex-grow-0 flex-shrink-0"></div>
   </div>
-
+  <!-- For TailwindCss -->
+  <!--   <ul><li><label><input type="checkbox" /></label><span></span></li></ul> -->
+  <!-- End -->
   <script>
     const main = document.querySelector('#main');
     window.addEventListener('resize', () => {
@@ -112,6 +114,11 @@
           };
           document.querySelector('#titleInput').addEventListener('focus', onFocusChange);
           editor.editing.view.document.on('change:isFocused', onFocusChange);
+
+          const scrollTo = (x, y) => {
+            const scrollView = document.querySelector('#scrollView');
+            scrollView.scrollTo(x, y);
+          };
 
           const setTitle = (title) => {
             document.querySelector('#titleInput').value = title;
@@ -222,7 +229,7 @@
           };
 
           window.justnote = {
-            setTitle, setDir, revokeObjectUrl, clearNoteMedia, addNoteMedia,
+            scrollTo, setTitle, setDir, revokeObjectUrl, clearNoteMedia, addNoteMedia,
             setBody, getData,
           };
           window.ReactNativeWebView.postMessage('editor:isReady:true');
