--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
   <script src="/js/ckeditor.js"></script>
   <link rel="stylesheet" href="/css/tailwind.css">
   <link rel="stylesheet" href="/css/ckeditor.css">
+
+  <script>
+    const isIPadIPhoneIPod = () => {
+      const ua = navigator.userAgent;
+      if (/iPad|iPhone|iPod/.test(ua)) {
+        return true;
+      }
+      if (/Mac OS X/.test(ua) && /Safari/.test(ua) && !/Chrome/.test(ua) && !/Firefox/.test(ua)) {
+        return true;
+      }
+      return false;
+    };
+
+    const addMaximumScaleToMetaViewport = () => {
+      const el = document.querySelector('meta[name=viewport]');
+      if (el !== null) {
+        let content = el.getAttribute('content');
+        const re = /maximum\-scale=[0-9\.]+/g;
+
+        if (re.test(content)) content = content.replace(re, 'maximum-scale=1.0');
+        else content = [content, 'maximum-scale=1.0'].join(', ');
+
+        el.setAttribute('content', content);
+      }
+    };
+
+    if (isIPadIPhoneIPod()) addMaximumScaleToMetaViewport();
+  </script>
 </head>
 <body class="antialiased overflow-hidden">
   <div id="main" class="flex flex-col overflow-hidden">
