--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     if (isIPadIPhoneIPod()) addMaximumScaleToMetaViewport();
   </script>
 </head>
-<body class="antialiased overflow-hidden">
+<body class="antialiased overflow-hidden bg-white">
   <div id="main" class="flex flex-col overflow-hidden">
     <div id="scrollView" class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
-      <div class="px-1.5 py-1.5 border-b border-gray-200">
-        <input type="text" name="titleInput" id="titleInput" class="block w-full text-xl font-normal text-gray-800 px-1.5 py-1.5 placeholder-gray-500 border-0 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
+      <div id="titleView" class="px-1.5 py-1.5 border-b border-gray-200">
+        <input type="text" name="titleInput" id="titleInput" class="block w-full border-0 bg-white px-1.5 py-1.5 text-xl font-normal text-gray-800 placeholder:text-gray-500 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
       </div>
       <div id="bodyInput"></div>
       <div class="h-28"></div>
@@ -209,6 +209,34 @@
           document.querySelector('#titleInput').addEventListener('focus', onFocusChange);
           editor.editing.view.document.on('change:isFocused', onFocusChange);
 
+          const setThemeMode = (mode) => {
+            const body = document.querySelector('body');
+            if (mode === 1) body.classList.add('blk:bg-gray-900');
+            else body.classList.remove('blk:bg-gray-900');
+
+            const main = document.querySelector('#main');
+            if (mode === 0) main.classList.add('wht-mode');
+            else main.classList.remove('wht-mode');
+
+            if (mode === 1) main.classList.add('blk-mode');
+            else main.classList.remove('blk-mode');
+
+            const titleView = document.querySelector('#titleView');
+            if (mode === 1) main.classList.add('blk:border-gray-700');
+            else titleView.classList.remove('blk:border-gray-700');
+
+            const titleInput = document.querySelector('#titleInput');
+            if (mode === 1) {
+              titleView.classList.add(
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+            } else {
+              titleView.classList.remove(
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+            }
+          }
+
           const setEditable = (editable) => {
             const maskView = document.querySelector('#maskView');
             maskView.style.display = editable ? 'none' : 'block';
@@ -360,8 +388,8 @@
           editor.model.document.on('change:data', onDataChange);
 
           window.justnote = {
-            setEditable, setScrollEnabled, scrollTo, setTitle, setDir, revokeObjectUrl,
-            clearNoteMedia, addNoteMedia, setBody, getData,
+            setThemeMode, setEditable, setScrollEnabled, scrollTo, setTitle, setDir,
+            revokeObjectUrl, clearNoteMedia, addNoteMedia, setBody, getData,
           };
           window.ReactNativeWebView.postMessage('editor:isReady:true');
         }
