Fix missing semi-collon

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                 'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
               );
             }
-          }
+          };
+          // semi-collon to end a function is important for export-ckeditor-as-string.js
 
           const setEditable = (editable) => {
             const maskView = document.querySelector('#maskView');
